@@ -1,3 +1,8 @@
+2009-06-16  Omair Majid  <omajid@redhat.com>
+
+	* netx/net/sourceforge/jnlp/services/ServiceUtil.java:
+	(invoke): Throw the original exception that caused the problem.
+
 2009-06-10  Omair Majid  <omajid@redhat.com>
 
 	* netx/net/sourceforge/jnlp/JNLPFile.java
